--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ local.properties
 # node.js
 #
 node_modules/
-src/keys/ApiKeys.js
+src/keys
 npm-debug.log
 yarn-error.log
 
@@ -58,3 +58,5 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+
