--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.0",
-    "@u-wave/react-youtube": "^0.6.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
@@ -24,9 +23,11 @@
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
+    "react-redux": "^7.1.3",
     "react-youtube": "^7.9.0",
     "recompose": "^0.30.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-promise": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
